package Chapter13;

public interface Element {
    public abstract void accept (Visitor v);
}
